--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Programming assignment",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -L server.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,8 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.8.6",
     "simple-slack-webhook": "0.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
