--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.8.6",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "simple-slack-webhook": "0.0.5"
   },
   "devDependencies": {
