--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^3.0.0",
     "github-user-orgs": "^1.0.2",
     "mongoose": "^4.8.6",
+    "octocat": "^1.1.0",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "simple-slack-webhook": "0.0.5"
