--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mongoose": "^4.8.6",
     "octonode": "^0.7.12",
     "passport": "^0.3.2",
-    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.10",
     "simple-slack-webhook": "0.0.5"
   },
   "devDependencies": {
