--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-github-webhook": "^1.0.6",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.8.6",
     "octonode": "^0.7.12",
